Open Vehicle Monitor System v3 - Change log

????-??-?? ???  ???????  OTA release
- Logging: file logging moved to dedicated task (improved performance)
  New commands:
    log status      Show logging status
    log open        (Re-)open currently set log file after "log close"
- Web UI: log monitoring via web shell
  Note: command "log monitor" doesn't apply, use the checkbox to disable.
- Factory reset from web/remote shell by "module factory reset -noconfirm"
- SWCAN: Support for add-on SWCAN module (see https://github.com/mjuhanne/OVMS-SWCAN)
    Add new "can4" bus (if compiled in)
    SWCAN leds (board and/or dongle):
      - Status led shows network connectivity
      - TX/RX led for SWCAN traffic
- MCP2515: Additional debugging commands
  New commands:
    viewregisters   Show MCP2515 register info
    writeregister   Write MCP2515 registers
- Volt/Ampera: Major update
  Add web config interface
  Support for SWCAN module and SWCAN messages
  Read following metrics:
    CAN1: engine on, motor rpm, odometer, speed, throttle, footbrake, gear
    SWCAN: Lock status, alarm status, fob button functions, tire pressure
    SWCAN: Ambient temperature, cabin temperature, AC front blower fan speed, coolant temperature, coolant heater power
    SWCAN: Configured charging current limit
  Proper event handling for charging started/stopped and alarm
  SWCAN High Voltage Wake Up functionality (requires separate SWCAN add-on module)
    - Interior light blinked after the wake up sequence
  Add following features (which all depend on SWCAN Wake Up):
    Mimic Onstar functionality: Door lock/unlock, Preheating
    Preheating (BCM overriding mode) for those cars that don't seem to respond to Onstar message
      - configurable maximum preheat time
    Set charging current limit
- Pushover: New Pushover notification framework support
  Configurable via Config/Notification web page
- SIMCOM: Allow user to set custom SIM PIN code